--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Testing and Deleting</h1>
+    <h1>Testing and Deleting</h1>
     <script src="app.js"></script>
 </body>
 </html>
